Fix modal dimming flicker

--- a/src/app/dialog.scss
+++ b/src/app/dialog.scss
@@ -173,12 +173,7 @@ body:not(.is-mobile) {
   }
 
   .modal-bg {
-    @starting-style {
-      opacity: 0 !important;
-    }
-
     background-color: rgba(0, 0, 0, 0.35);
-    transition: var(--anim-duration-fast);
   }
   .modal {
     box-shadow: var(--shadow-s);
